# Bipedal_Work

./: Assemblage1.SLDASM  PerformanceLog.txt  Pièce10.SLDPRT  README.md  archive.tar.xz  bodty_bas.STL  bras_bas.STL  bras_haut.SLDPRT  bras_haut.STL  bras_haut1.SLDPRT  cover_batterie.SLDPRT  cover_top_head.SLDPRT  horntestv2.SLDPRT  horntestv2.STL  low_cover_head-Etude_de_topologie_1-GD.par  low_cover_head.SLDPRT  low_cover_head.STL  lower_leg.SLDPRT  side_piece_cover_head.SLDPRT  test_embout.SLDPRT  test_embout.STL
CAD/solidworks/: bipedal.SLDASM  body_down.SLDPRT  body_up.SLDPRT  leg_down.SLDPRT  protect_screw.SLDPRT
CAD/solidworks/assets/: wheel.SLDPRT
CAD/stl/: body_up.STL  protect_screw.STL
PCB/pcb/: pcb.kicad_prl  pcb.kicad_pro
cad/base/: base_lvl0.SLDPRT  base_lvl2.SLDPRT  front_lvl0.SLDPRT  front_lvl1.SLDPRT  side_lvl1_1.SLDPRT  side_lvl1_2.SLDPRT
cad/imported_parts/l298n/: placa_controlador_nueva v56.SLDASM
cad/joints/: attach_r.SLDPRT  attach_servo.SLDPRT  hip_attach_servo.SLDPRT  hip_base.SLDPRT  joint_attach_r.SLDPRT  knee_base.SLDPRT
cad/lower_leg/: lower_leg_r.SLDPRT
cad/upper_leg/: upper_leg.SLDPRT  upper_leg_r.SLDPRT
model_cad/solidworks/: attach_servo.SLDPRT
model_cad/stl/: attach_servo.STL
model_urdf/: CMakeLists.txt  package.xml
model_urdf/config/: joint_names_bipedal.SLDASM.yaml
model_urdf/launch/: display.launch  gazebo.launch
model_urdf/meshes/: body.STL  down_left.STL  down_right.STL  up_left.STL  up_right.STL  wheel_left.STL  wheel_right.STL
model_urdf/urdf/: bipedal.SLDASM.csv  bipedal.SLDASM.urdf
ros2_bipedal_ws/balancing_pkg/: CMakeLists.txt  package.xml
ros2_bipedal_ws/dc_motor_control_pkg/: CMakeLists.txt  package.xml
ros2_bipedal_ws/src/: README.md  archive.tar.xz  test.py
ros2_bipedal_ws/src/bipedal_bringup/: CMakeLists.txt  package.xml
ros2_bipedal_ws/src/bipedal_bringup/launch/: bringup.launch.py
ros2_bipedal_ws/src/raspi_servo_interface/: CMakeLists.txt  package.xml  raspi_servo_interface.xml
ros2_bipedal_ws/src/raspi_servo_interface/bringup/config/: pos_servo.yaml
ros2_bipedal_ws/src/raspi_servo_interface/bringup/launch/: servo.launch.py  test_pos.launch.py
ros2_bipedal_ws/src/raspi_servo_interface/description/config/: config.rviz
ros2_bipedal_ws/src/raspi_servo_interface/description/launch/: display.launch.py
ros2_bipedal_ws/src/raspi_servo_interface/description/urdf/: servo.xacro
ros2_bipedal_ws/src/raspi_servo_interface/include/raspi_servo_interface/: servo.hpp  servo_control_lib.hpp  visibility_control.h
ros2_bipedal_ws/src/raspi_servo_interface/src/: servo.cpp  servo_control_lib.cpp
ros2_bipedal_ws/src/raspi_servo_interface/test/: test_raspi_servo_interface.cpp
test/: balance_test.py  left_encoder_test.py  motors_test.py
tests_et_archive/: balance_test.py  motors_test.py  right_encoder_test.py  servo_test.py  test.py
(+136 files in other folders)
