<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bipedal_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="le.lay.louis@gmail.com">louis</maintainer>
  <license>Bipedal Bringup Package</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>champ_base</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
